# rl-control

./: .gitignore  README.md
src/control_msgs/: CMakeLists.txt  package.xml
src/control_msgs/msg/: StateActionPair.msg
src/pendulum_control/: CMakeLists.txt  package.xml
src/pendulum_control/include/pendulum_control/: actor_critic_controller.hpp  pendulum_sim.hpp
src/pendulum_control/launch/: start_sim.launch.py
src/pendulum_control/src/: actor_critic_controller.cpp  nn_controller.cpp  pendulum_sim.cpp  pid_controller.cpp
